Internal screen refresh rate is slow and inconsistent on Intel i7-1370p (ADL-P) platform
GUI is bumpy, and the display seems not updated at all when there's something happening on the screen (e.g. glxgears). When we try to move the cursor by mouse, it doesn't respond for ~1 second and then suddenly jump to the expected position.
External screen connected through HDMI does not exhibit the issue.
Tried the latest drm-tip kernel (drm-tip: 2022y-12m-28d-10h-47m-52s) but no luck. We're pretty sure the the stepping info for this platform (commit dc73ac63e63a drm/i915/rpl-p: Add stepping info) is there and the NVIDIA modules is not even loaded. Please suggest what we should do next for investigating the issue further. Thanks